--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "morgan": "^1.9.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
@@ -12,7 +14,9 @@
     "react-scripts": "1.1.1"
   },
   "scripts": {
+    "all" : "npm run start & npm run server:start",
     "start": "react-scripts start",
+    "server:start": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
