--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "library",
   "version": "0.1.0",
   "private": true,
+    "proxy": "http://localhost:9000/",
   "dependencies": {
     "classnames": "^2.2.5",
     "express": "^4.16.3",
