--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "deploy": "node server/deploy.js",
     "all": "npm run server:start & npm run start",
     "start": "react-scripts start",
-    "server:start": "node server",
+    "server": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
